--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
             <button id="clearPathBtn">Clear Path</button>
             <button id="loadDataBtn">Load New Data</button>
         </div>
+
+    <div class="controls">
+        <input type="file" id="fileInput" accept="image/*">
+        <button id="processBtn">Process Image</button>
+        <button id="pauseBtn">Pause</button>
+        <button id="resetBtn">Reset</button>
+        <button id="clearPathBtn">Clear Path</button>
+        <button id="loadDataBtn">Load New Data</button>
+    </div>
         <div class="info">
             <p>Data from: <span id="dataSource">epicycle-data.js</span></p>
             <p>Circles: <span id="circleCount">0</span></p>
